src/content/styles/modules/_app-menu.scss
// Primary mixin
@mixin sidenav {
    md-sidenav {
        &.site-sidenav {
            max-width: 256px;
            min-width: 256px;
            flex-direction: column;

            > md-content {
                flex-direction: column;
                display: flex;
                flex: 1;
                padding: rem(0.8) 0;
            }

            .rv-version {
                text-align: center;

                &-number {
                    font-weight: bold;
                    display: block;
                }

                &-hash {
                    margin-left: rem(0.3);
                    font-weight: normal;
                    font-size: smaller;
                }

                &-timestamp {
                    font-size: smaller;
                }
            }

            .app-logo {
                text-align: center;
                display: flex;
                flex-direction: column;
                align-items: center;
                margin: 0 auto;
                border-bottom-color: $primary-color-light;
                background: linear-gradient(#CFD8DC, #FFFFFF);

                img {
                    flex-shrink: 0; // IE11 fix, see https://github.com/philipwalton/flexbugs#6-the-default-flex-value-has-changed
                    max-width: 100%;
                    max-height: 100%;
                }

                div {
                    width: rem(15);
                    height: rem(15);
                    margin-top: rem(3);
                    display: flex;
                    justify-content: center;
                    align-items: center;
                }
            }

            .minimize-button {
                position:absolute;
                margin: 10px;
                top:0;
                right:0;
            }

            .app-logotype {
                color: black;
                text-align: center;
                font-weight: 400;
                font-size: 26px;
            }

            .app-menu {
                padding: 0;
                margin: 0;
                list-style: none;
                max-width: 100%;
                overflow-x: hidden;
            }

            .menu-heading {
                display: block;
                line-height: 32px;
                margin: 0;
                padding: 8px 16px 0;
                text-align: left;
                width: 100%;
                color: black;
            }
            @include menu-link;
        }
    }
}

@mixin menu-link {
    rv-menu-link {
        padding: 0;
        margin: 0;
        @include menu-button;
    }
}

@mixin menu-button {
    .md-button {
        border-radius: 0;
        color: black;
        cursor: pointer;
        display: block;
        align-items: inherit;
        line-height: 40px;
        margin: 0;
        max-height: 40px;
        overflow: hidden;
        padding: 0 16px;
        text-align: left;
        text-decoration: none;
        white-space: normal;
        width: 100%;
    }
}

